--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       const pass = document.getElementById("password").value;
       
       // Set your desired username and password here
-      const validUser = "admin";
-      const validPass = "12345";
+      const validUser = "VIVEK";
+      const validPass = "Kharshini2011@";
 
       if (user === validUser && pass === validPass) {
         document.getElementById("login-section").style.display = "none";
