--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
   <div id="image-section">
     <h2>Welcome!</h2>
-    <img src="https://via.placeholder.com/200" alt="Image 1">
-    <img src="https://via.placeholder.com/200" alt="Image 2">
-    <img src="https://via.placeholder.com/200" alt="Image 3">
+    <img src="vivek.png" alt="Image 1">
+    <img src="vivek.png" alt="Image 2">
+    <img src="vivek.png" alt="Image 3">
   </div>
 
   <script>
