--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 
   <div id="image-section">
-    <h2>Welcome!</h2>
+    <h2>(HIDDEN_PHOTOS)</h2>
     <img src="vivek.png" alt="vivek">
   </div>
 
@@ -41,7 +41,7 @@
       const pass = document.getElementById("password").value;
       
       // Set your desired username and password here
-      const validUser = "VIVEK";
+      const validUser = "vivek__1.4.3";
       const validPass = "Kharshini2011@";
 
       if (user === validUser && pass === validPass) {
